# skene-growth

./: README.md  pyproject.toml
benchmarks/: config-flagship-models.toml  config.toml  run.py
benchmarks/evaluation/: factual.py  report.py  structural.py
benchmarks/runner/: orchestrator.py  pipeline.py
docs/: index.md  llms.txt  troubleshooting.md
docs/getting-started/: quickstart.md
docs/guides/: analyze.md  build.md  configuration.md  features.md  login.md  push.md
docs/reference/: cli.md  manifest-schema.md  python-api.md
pypi-shim/: pyproject.toml
pypi-shim/src/skene_growth/: __init__.py
src/skene/: __init__.py
src/skene_growth/: config.py  feature_registry.py
src/skene_growth/analyzers/: prompts.py
src/skene_growth/cli/: auth.py  main.py  output_writers.py
src/skene_growth/growth_loops/: push.py  storage.py  upstream.py
src/skene_growth/validators/: loop_validator.py
tests/: test_feature_registry.py
tests/test_growth_loops/: test_schema_init.py  test_storage.py  test_upstream.py
tui/: .air.toml  .gitignore  Makefile  README.md  go.mod  go.sum  install.sh
tui/cmd/skene/: main.go
tui/internal/constants/: constants.go  strings.go
tui/internal/game/: shooter.go
tui/internal/services/auth/: callback.go
tui/internal/services/config/: manager.go
tui/internal/services/growth/: engine.go
tui/internal/services/ide/: communicator.go
tui/internal/services/syscheck/: checker.go
tui/internal/services/uvresolver/: resolver.go
tui/internal/tui/: app.go
tui/internal/tui/components/: ascii_motion_placeholder.go  button.go  dir_browser.go  help.go  progress.go  terminal_output.go  wizard_header.go
tui/internal/tui/styles/: styles.go
tui/internal/tui/views/: analysis_config.go  analyzing.go  apikey.go  auth.go  error.go  local_model.go  model.go  next_steps.go  project_dir.go  provider.go  results.go  welcome.go
