[project]
name = "skene"
version = "0.3.0"
description = "PLG analysis toolkit for codebases - analyze code, detect growth opportunities, generate documentation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4"
authors = [
    { name = "Skene Technologies" }
]
keywords = ["plg", "growth", "codebase", "analysis", "documentation", "llm", "mcp", "mcp-server", "ai-tools", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0",
    "aiofiles>=24.0",
    "loguru>=0.7.0",
    "jinja2>=3.0",
    "typer>=0.12",
    "rich>=13.0",
    "google-genai>=1.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "xxhash>=3.0",
]
ui = [
    "questionary>=2.0",
]

[project.scripts]
skene = "skene.cli.main:skene_entry_point"
skene-mcp = "skene.mcp:main"
skene-growth = "skene.cli.main:skene_growth_deprecated_entry"
skene-growth-mcp = "skene.cli.main:skene_growth_mcp_deprecated_entry"

[project.urls]
Homepage = "https://www.skene.ai"
Documentation = "https://www.skene.ai/resources/docs/skene"
Repository = "https://github.com/SkeneTechnologies/skene"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skene"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
