[project]
name = "skene-growth"
version = "0.3.0"
description = "Transitional package: skene-growth has been renamed to skene"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["skene>=0.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skene_growth"]
